Added Map and Added address field to Service

--- a/WhatsIn/WhatsIn.csproj
+++ b/WhatsIn/WhatsIn.csproj
@@ -261,6 +261,10 @@
     <Compile Include="Migrations\201802121815027_Update_Service.Designer.cs">
       <DependentUpon>201802121815027_Update_Service.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201805101906453_Add_Address_To_Service.cs" />
+    <Compile Include="Migrations\201805101906453_Add_Address_To_Service.Designer.cs">
+      <DependentUpon>201805101906453_Add_Address_To_Service.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -426,6 +430,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201802121815027_Update_Service.resx">
       <DependentUpon>201802121815027_Update_Service.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805101906453_Add_Address_To_Service.resx">
+      <DependentUpon>201805101906453_Add_Address_To_Service.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
