--- a/WhatsIn/Web.config
+++ b/WhatsIn/Web.config
@@ -19,6 +19,12 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="AppId" value="521691674869125"/>
     <add key="AppSecret" value="43f8b0dff0189695b5a51146de689e94"/>
+    <add key="mailHost" value="Smtp.gmail.com" />
+    <add key="mailAccount" value="whatsinhelps@gmail.com" />
+    <add key="mailPassword" value="Strike123$$" />
+    <add key="enableSsl" value="True" />
+    <add key="mailPort" value="587" />
+
   </appSettings>
   <system.web>
     <authentication mode="None" />
