--- a/WhatsIn/Web.config
+++ b/WhatsIn/Web.config
@@ -20,7 +20,8 @@
     <add key="AppId" value="521691674869125"/>
     <add key="AppSecret" value="43f8b0dff0189695b5a51146de689e94"/>
     <add key="mailHost" value="Smtp.gmail.com" />
-    <add key="mailAccount" value="whatsinhelps@gmail.com" />
+    <add key="mailFrom" value="whatsinhelps@gmail.com" />
+    <add key="mailTo" value="rodelsimangan@gmail.com" />
     <add key="mailPassword" value="Strike123$$" />
     <add key="enableSsl" value="True" />
     <add key="mailPort" value="587" />
