--- a/WhatsIn/Web.config
+++ b/WhatsIn/Web.config
@@ -5,9 +5,8 @@
   -->
 <configuration>
   <configSections>
-
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=MNL0255585D1GBS\SQLEXP08R2;Initial Catalog=_WhatsInDB;Integrated Security=True" providerName="System.Data.SqlClient" />
@@ -17,8 +16,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="AppId" value="2178273222385050"/>
-    <add key="AppSecret" value="72710e7e4b7ea3c08154fe198bf777d5"/>
+    <add key="AppId" value="2178273222385050" />
+    <add key="AppSecret" value="72710e7e4b7ea3c08154fe198bf777d5" />
     <add key="mailHost" value="Smtp.gmail.com" />
     <add key="mailFrom" value="whatsinphapp@gmail.com" />
     <add key="mailTo" value="rodelsimangan@gmail.com" />
@@ -27,6 +26,20 @@
     <add key="mailPort" value="587" />
 
   </appSettings>
+  <log4net debug="true">
+    <appender name="LogFileAppender" type="log4net.Appender.FileAppender">
+      <param name="File" value="C:\Repos\RobinsonsCMS\CMSPortal\CMSPortal\Logs\CMSPortal.log" />
+      <!--<param name="AppendToFile" value="true"/>-->
+      <layout type="log4net.Layout.PatternLayout">
+        <!--param name="ConversionPattern" value="%d [%t] %-5p %c %m%n" /-->
+        <conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
+      </layout>
+    </appender>
+    <root>
+      <level value="All" />
+      <appender-ref ref="LogFileAppender" />
+    </root>
+  </log4net>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
