--- a/WhatsIn/packages.config
+++ b/WhatsIn/packages.config
@@ -6,6 +6,7 @@
   <package id="Facebook" version="7.0.6" targetFramework="net45" />
   <package id="jQuery" version="3.2.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net45" />
+  <package id="log4net" version="2.0.8" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights" version="2.4.0" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.4.1" targetFramework="net45" />
