--- a/WhatsIn/Web.config
+++ b/WhatsIn/Web.config
@@ -20,18 +20,17 @@
     <add key="AppSecret" value="72710e7e4b7ea3c08154fe198bf777d5" />
     <add key="mailHost" value="Smtp.gmail.com" />
     <add key="mailFrom" value="whatsinphapp@gmail.com" />
+    <add key="mailFromSupport" value="whatsinhelps@gmail.com" />
     <add key="mailTo" value="rodelsimangan@gmail.com" />
     <add key="mailPassword" value="Strike123$$" />
     <add key="enableSsl" value="True" />
     <add key="mailPort" value="587" />
-
+    <add key="SendLogToEmail" value="True"/>
   </appSettings>
   <log4net debug="true">
     <appender name="LogFileAppender" type="log4net.Appender.FileAppender">
-      <param name="File" value="C:\Repos\RobinsonsCMS\CMSPortal\CMSPortal\Logs\CMSPortal.log" />
-      <!--<param name="AppendToFile" value="true"/>-->
+      <param name="File" value="G:\PleskVhosts\whatsin.ph\logs\whatsin\whatsin.log" />      
       <layout type="log4net.Layout.PatternLayout">
-        <!--param name="ConversionPattern" value="%d [%t] %-5p %c %m%n" /-->
         <conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
       </layout>
     </appender>
