--- a/WhatsIn/Web.config
+++ b/WhatsIn/Web.config
@@ -9,7 +9,7 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=MNL0255585D1GBS\SQLEXP08R2;Initial Catalog=_WhatsInDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=MNL0255585D1GBS\SQLEXP08R2;Initial Catalog=WIDB;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
