8-28-18 - Added Mcafee TrustedSite and Email in footer

--- a/WhatsIn/Web.config
+++ b/WhatsIn/Web.config
@@ -18,13 +18,21 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="AppId" value="2178273222385050" />
     <add key="AppSecret" value="72710e7e4b7ea3c08154fe198bf777d5" />
-    <add key="mailHost" value="Smtp.gmail.com" />
+    <!--add key="mailHost" value="Smtp.gmail.com" />
     <add key="mailFrom" value="whatsinphapp@gmail.com" />
     <add key="mailFromSupport" value="whatsinhelps@gmail.com" />
     <add key="mailTo" value="rodelsimangan@gmail.com" />
     <add key="mailPassword" value="Strike123$$" />
     <add key="enableSsl" value="True" />
-    <add key="mailPort" value="587" />
+    <add key="mailPort" value="587" /-->
+    <add key="mailHost" value="smtpout.secureserver.net" />
+    <add key="mailFrom" value="	contact-us@whatsin.ph" />
+    <add key="mailFromSupport" value="support@whatsin.ph" />
+    <add key="mailTo" value="whatsinphapp@gmail.com" />
+    <add key="mailPassword" value="Strike01" />
+    <add key="enableSsl" value="False" />
+    <add key="mailPort" value="465" />
+
     <add key="SendLogToEmail" value="True"/>
   </appSettings>
   <log4net debug="true">
