--- a/WhatsIn/packages.config
+++ b/WhatsIn/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.3.7" targetFramework="net45" />
+  <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.17.45" targetFramework="net45" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="Facebook" version="7.0.6" targetFramework="net45" />
   <package id="jQuery" version="3.2.1" targetFramework="net45" />
@@ -36,6 +37,7 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.1.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
+  <package id="Moment.js" version="2.9.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
